log
Thu 16 May 2024 06:40:13 PM UTC: 
 tests:  0|5
total_score: 0/70
ff4b083
Thu 16 May 2024 07:01:10 PM UTC: 
 sudoku.c | 42 +++++++++++++++++++++++++++++-------------
 1 file changed, 29 insertions(+), 13 deletions(-)
 tests:  1|5
total_score: 5/70
a88a993
Thu 16 May 2024 07:06:14 PM UTC: 
 sudoku.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
ae32a0d
Thu 16 May 2024 07:28:22 PM UTC: 
 sudoku.c | 42 ++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 42 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:89:54: error: invalid type argument of ‘->’ (have ‘int’)
   89 |                         if (m != row && n != col && n->sudo[m][n] == data)
      |                                                      ^~
Compilation failed
c8fefa7
Thu 16 May 2024 07:32:53 PM UTC: 
 sudoku.c | 38 ++++----------------------------------
 1 file changed, 4 insertions(+), 34 deletions(-)
 tests:  2|4
total_score: 15/70
eac1b7d
Thu 16 May 2024 07:38:24 PM UTC: 
 sudoku.c | 33 +++++++++++++++++++++++++++++----
 1 file changed, 29 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
42b6ce2
Thu 16 May 2024 07:43:25 PM UTC: 
 sudoku.c | 63 ++++++++++++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 46 insertions(+), 17 deletions(-)
 tests:  5|3
total_score: 35/70
96f4a32
Thu 16 May 2024 07:43:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
8fb6f7e
Thu 16 May 2024 07:44:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
e0a0e63
Thu 16 May 2024 07:45:50 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
a262f37
Thu 16 May 2024 07:49:45 PM UTC: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:139:62: error: zero-length gnu_printf format string [-Werror=format-zero-length]
  139 |                      if (is_valid(adjacentNode) == 0) printf("");
      |                                                              ^~
cc1: all warnings being treated as errors
Compilation failed
ef44099
Thu 16 May 2024 07:50:44 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
2936c00
Thu 16 May 2024 07:54:58 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|4
total_score: 20/70
8b1f1e2
Thu 16 May 2024 07:55:09 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 35/70
f911967
Thu 16 May 2024 07:56:13 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  6|2
total_score: 45/70
dd3e7ea
Thu 16 May 2024 08:08:40 PM UTC: 
 sudoku.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
test.c: In function ‘test_dfs’:
test.c:206:19: error: implicit declaration of function ‘DFS’ [-Werror=implicit-function-declaration]
  206 |     Node* final = DFS(initial, &cont);
      |                   ^~~
test.c:206:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:230:11: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  230 |     final = DFS(initial, &cont);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
3b96cb6
Thu 16 May 2024 08:09:08 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
36df8f7
Thu 16 May 2024 08:14:43 PM UTC: 
 sudoku.c | 16 ++++++----------
 1 file changed, 6 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:169:13: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  169 |     while (!isEmpty(stack)) {
      |             ^~~~~~~
      |             is_empty
sudoku.c:185:9: error: implicit declaration of function ‘freeList’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
  185 |         freeList(adj_nodes); // Liberar la lista de nodos adyacentes
      |         ^~~~~~~~
      |         createList
cc1: all warnings being treated as errors
Compilation failed
77dc1f8
Thu 16 May 2024 08:16:11 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:169:13: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  169 |     while (!isEmpty(stack)) {
      |             ^~~~~~~
      |             is_empty
cc1: all warnings being treated as errors
Compilation failed
69893ad
